--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -6,6 +6,10 @@
     backface-visibility: rgb(83, 157, 241)
 }
 
+.my-depth-1 {
+    box-shadow: 0px 2px 4px black;
+
+}
 .blur{
     
     filter: blur(10px); 
