--- a/resources/assets/js/app.css
+++ b/resources/assets/js/app.css
@@ -1,3 +1,100 @@
+
+
+
+
+.anoda{
+    animation-name:fa-spin;
+    animation-duration: infinite;
+}
+
+.pic-piece-image{
+    width:100% !important;
+    min-height:620px !important;
+    overflow-y:hidden;
+    cursor:pointer;
+    border-radius:0px;
+    
+}
+.pic-piece-image:hover{
+    -webkit-box-shadow:0 27px 24px 0 rgba(0,0,0,.2),0 40px 77px 0 rgba(0,0,0,.22);
+    box-shadow:0 27px 24px 0 rgba(0,0,0,.2),0 40px 77px 0 rgba(0,0,0,.22);
+    transition: 0.2s ease-in all;
+}
+.spinner-logo {
+  animation: spinner-logo-spin infinite .5s linear;
+  height: 80px;
+}
+@keyframes spinner-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+
+
+.font-red{
+    color:red;
+}
+.font-blue{
+    background: rgb(63, 158, 247) !important;
+}
+.number-font{
+    font-family: sans-serif;
+}
+
+.p-r-fix{
+        /*pull-right-fx*/
+    margin:5px;
+}
+
+.i-p-overlay{
+    background:black; 
+    opacity:0.5; 
+    height:200px;
+    z-index: 1;
+}
+
+.zero-border{
+    border:solid 0px black !important;
+}
+.btn-undefault:focus{
+    outline:0; 
+    border: solid 0px black !important;
+}
+
+.p-activate-section{
+    /*paper - activate -section*/
+    background:crimson !important;
+    color:white !important;
+}
+.p-activate-section-green{
+    /*paper - activate -section*/
+    background:green !important;
+    color:white !important;
+}
+.p-activate-section-blue{
+    /*paper - activate -section*/
+    background:crimson !important;
+    color:white !important;
+}
+
+.d-tab{
+    font-weight: 500;
+    padding:8px 15px; 
+     background:inherit; 
+    margin:0;
+    cursor:pointer;
+    height:100%;
+    overflow-x:hidden;
+}
+
+.d-tab:hover{
+    background:orange;
+    color:black;
+    transition:0.3s ease-in all;
+}
+
+
+
 .margin-5{
     margin:5px;
 }
@@ -7,6 +104,21 @@
 .relative{
     position: relative;
 }
+.input-file-textbox{
+    border:solid 0px #808080; 
+    box-shadow: 0 0 0 gray;
+    border-bottom-width:2px;
+}
+
+.input-file-textbox:focus{
+    border:solid 0px #808080; 
+    box-shadow: 0 0 0 gray;
+    border-bottom-width:2px;
+}
+.zero-radius{
+    border-radius:0px;
+}
+
 .m-side-active{
         /*modal side option active*/
     color:white;
@@ -14,6 +126,19 @@
     box-shadow: 0px 2px 4px #202020;        
     transition: 0.2s ease-in all; 
     cursor:pointer;
+}
+.search-box{
+    border:solid 0px #808080;
+    border-bottom-width:2px;
+    box-shadow: 0 0 0 gray;
+    border-radius:0px;
+}
+.search-box:focus{
+    border:solid 0px #808080;
+    border-bottom-width:2px;
+    box-shadow: 0 0 0 gray;
+    border-radius:0px;
+
 }
 .round-float-button{
     float:right;
@@ -148,8 +273,18 @@
 
   }
 .modal-height{
-    height:500px;
+    min-height:500px;
+    overflow-y:scroll;
     padding-top:0;
+    padding-right:0px !important;
+}
+
+.pic-modal-height{
+    min-height:620px;
+
+    padding-top:0;
+    padding-right:0 !important;
+    padding-left:64px;
 }
 .modal-side-bar{
     /*padding-top:20px;   */
@@ -162,16 +297,44 @@
 
 
 }
+.red{
+    background: crimson; 
+    color:white;
+}
 .app-color{ 
     background: rgb(63, 158, 247) !important;
     color:white !important;
  }
 
+.z-depth-1-half{
+    box-shadow:0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
+}
+.z-depth-1{
+    -webkit-box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
+    box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)
+}
+.z-depth-2{
+    -webkit-box-shadow:0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);
+    box-shadow:0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19)
+}
+.z-depth-3{
+    -webkit-box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+    box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19)}
+.z-depth-4{
+    -webkit-box-shadow:0 16px 28px 0 rgba(0,0,0,.22),0 25px 55px 0 rgba(0,0,0,.21);
+    box-shadow:0 16px 28px 0 rgba(0,0,0,.22),0 25px 55px 0 rgba(0,0,0,.21)}
+.z-depth-5{
+    -webkit-box-shadow:0 27px 24px 0 rgba(0,0,0,.2),0 40px 77px 0 rgba(0,0,0,.22);
+    box-shadow:0 27px 24px 0 rgba(0,0,0,.2),0 40px 77px 0 rgba(0,0,0,.22)}
+    
 .my-depth-1 { 
     box-shadow: 0px 1px 2px gray;
  }
  .my-depth-half { 
     box-shadow: 0px 1px 1px gray;
+ }
+ .my-depth-half-b { 
+    box-shadow: 0px 1px 1px black;
  }
  .my-depth-2 { 
     box-shadow: 0px 3px 3px gray;
@@ -218,7 +381,6 @@
     border-bottom-width:3px; 
     padding:20px;
     margin-bottom:10px;
-
  }
 
 
@@ -241,8 +403,6 @@ body{
     color:rgb(117, 116, 116);   
     background:white;
 }
-
-
 .solid-p-w{
     /* solid-paper-weight */
     box-shadow: 0px 1px 1px rgb(163, 161, 161);
@@ -312,13 +472,25 @@ body{
 .my-tab{
     margin-top:70px;
 }
+.tab-text{
+    border-bottom-color:crimson;
+}
+.tab-upload{
+    border-bottom-color:green;
+}
+.tab-umb{
+    border:solid 2px #585858 !important; 
+    border-bottom-width:0 !important;
+}
 .tab-option{
-    background: #f8f6f6; 
+    background: inherit; 
     color:rgb(107, 106, 106);
     text-align:center; 
-    padding:10px; 
+    padding:10px 0 !important; 
+    margin:0 !important;
     width:100%; 
     border:solid 0px black;
+    border-bottom-width:2px;
     border-top-right-radius:10px; 
     border-top-left-radius: 10px;
 }
@@ -328,10 +500,10 @@ body{
     transition: 0.2s ease-in all;
 }
  .tab-option:focus{ 
-    background: rgb(63, 158, 247) !important;
-    color:white !important;
-    border:solid 2px rgb(63, 158, 247) !important;
-    border-color: rgb(63, 158, 247) !important;
+    border:solid 2px #585858 !important;
+    border-color: #585858 !important;
+    border-bottom-width:0 !important;
+    margin:0 !important;
     outline:0;
   }
 
@@ -362,15 +534,17 @@ body{
 .my-card-footer{
     margin-top:0px; 
     padding:10px;
-    background:rgb(63, 158, 247);
-    border:solid 2px rgb(63, 158, 247);
+    /*background:rgb(63, 158, 247);   */
+    background:#272727;
+    /*border:solid 2px rgb(63, 158, 247); */ 
+    border:solid 2px #272727;
     border-top-width:0px;
 }
 .my-card > p{
     margin:2px;
-    padding:2px;
-    
+    padding:2px;   
 }
+
 .side-li{
     padding:10px; 
     color:white; 
@@ -378,6 +552,7 @@ body{
     text-align: left; 
     margin:0px 0px;
 }
+
 
 .side-active {
     background: white; 
@@ -393,8 +568,8 @@ body{
 }
 .title-flag{
     padding:5px; 
-    border:solid 0px #808080; 
-    border-bottom-width:2px;
+    border:solid 0px #585858; 
+    border-bottom-width:0px;
     text-transform:uppercase;
     
 }
@@ -404,8 +579,17 @@ body{
     margin:0px;
 
 
-}.vanish{
-    display:none ;
+}
+.s-vanish{
+        /*stylish vanish*/
+    opacity:0;
+    transition:0.5s ease-out all;
+    display:none;
+}
+.vanish{
+    display: none;
+
+   
    
 }
 .my-thumbnail{
@@ -417,18 +601,43 @@ body{
     font-size:1.5rem;
     
 }
+.pic-trans{
+    opacity:1;
+    transition: 0.5s ease-in all;
+}
+.my-pic-card{
+    min-height:200px; 
+    max-height:200px; 
+    overflow-y:'scroll';
+    border-radius:10px;
+    border-bottom-right-radius: 0px; 
+    border-bottom-left-radius:0px;
+    border:solid 1px rgb(212, 211, 211);
+    /*padding:20px;            */
+    font-size:1.5rem;
+    cursor:pointer;
+    
+    
+}
+
+.shots-img:hover{
+    transform:scale(1.1);
+}
 .my-card{
     min-height:200px; 
     max-height:200px; 
     overflow-y:'scroll';
-    background:white; 
+    border-radius:10px;
+    border-bottom-right-radius: 0px; 
+    border-bottom-left-radius:0px;
     border:solid 1px rgb(212, 211, 211);
-    padding:20px;
+    padding:20px;        
     font-size:1.5rem;
+    
     
 }
 .my-card:hover{
-    background:black; 
+    background:#585858; 
     color:white; 
     transition:0.3s ease-in all;
     cursor:pointer;
