--- a/resources/assets/js/app.css
+++ b/resources/assets/js/app.css
@@ -1,6 +1,19 @@
 
-
-
+.corner-10{
+    margin:2px 2px !important; 
+    border-radius:3px;
+}
+.extra-img-div{
+    margin-bottom:10px;
+}
+.p-space-1{
+    margin:5px 7px;
+}
+.inside-popover{
+    margin:10px; 
+    padding:10px;
+    text-align:center;
+}
 .file-check{
     padding:10px;
 }
@@ -121,7 +134,13 @@
 .zero-radius{
     border-radius:0px;
 }
-
+.multiple-side-active{
+    color:white;
+    background: orange; 
+    box-shadow: 0px 2px 4px #202020;        
+    transition: 0.2s ease-in all; 
+    cursor:pointer;
+}
 .m-side-active{
         /*modal side option active*/
     color:white;
@@ -267,14 +286,27 @@
   .modal-s-i-c:active{ 
         color: rgb(63, 158, 247);
    }
- .modal-side-items:hover{ 
+.multiple-m-pages-btn{
+     padding:10px;  
+     text-align: center; 
+     border: solid 0px white;
+}
+
+.multiple-m-pages-btn:hover{
+    color:white;
+    background: orange; 
+    box-shadow: 0px 2px 4px #202020;        
+    transition: 0.2s ease-in all; 
+    cursor:pointer;
+    }
+    .modal-side-items:hover{ 
     color:white;
     background: crimson; 
     box-shadow: 0px 2px 4px #202020;        
     transition: 0.2s ease-in all; 
     cursor:pointer;
 
-  }
+}
 .modal-height{
     min-height:500px;
     overflow-y:scroll;
