--- a/resources/assets/js/app.css
+++ b/resources/assets/js/app.css
@@ -423,6 +423,7 @@
     padding-right:0 !important;
     padding-left:64px;
 }
+
 .modal-side-bar{
     /*padding-top:20px;   */
     left:0;
@@ -438,8 +439,12 @@
     background: crimson; 
     color:white;
 }
+.b-app-color{
+    border-color:royalblue;
+}
 .app-color{ 
-    background: rgb(65, 85, 255) !important;
+    background:royalblue;
+        /*background: rgb(65, 85, 255) !important;*/
     color:white !important;
  }
 .p-black-color{
@@ -591,14 +596,93 @@ body{
 
 
 }
+.comment-box{
+    height:35px !important;
+    word-wrap:break-word;
+}
+.ease-in-slow{
+     transform:scale(1);
+     transition:0.2s ease-in all;
+}
+.cursor{
+    cursor:pointer;
+}
+.awesome-margin{
+    margin:5px;
+}
+.comment-item-title{
+    padding:5px; 
+}
+.black-text{
+    color:black;
+}
+.comment-box-initial{
+    height: 1px;
+    position: absolute;
+    opacity:0;
+  
+}
+.comment-item-text{
+    background:whitesmoke; 
+    padding:6px 15px; 
+    display:inline-block;
+
+}
+.appear{
+    display:block;
+}
+.comment-box-entry{
+    position:absolute;
+    z-index:1;
+    opacity:1;
+    transition-delay:3s;
+    transition:0.5s ease-in-out;
+   
+}
 .paper-title-div{
     background: whitesmoke;
     color: black;
     margin-top: 3px;
     padding: 1px;
     padding-left: 15px;
-}
 
+}
+.user-badge-comment{
+    outline: 0 !important;
+    background:#e6e5e5 !important;
+    border:solid 0px black !important;
+    box-shadow:4px 0 0 gray !important;
+}
+.user-badge:focus{
+    outline: 0 !important;
+    border:solid 0px black !important;
+}
+.triangle{
+    border:solid 15px navajowhite;
+    width:30px;
+    border-left-color:transparent;
+    border-right-color:transparent;
+
+    border-top-color:transparent;
+    background:transparent;
+
+}
+.p-text-view{
+    background:antiquewhite;
+    color:black;
+     transform:scale(1.3);
+     overflow-y:scroll !important;
+     transition:0.2s ease-in all;
+     padding:30px !important;
+     max-height:400px !important; 
+     box-shadow:0 2px 2px gray;
+     
+}
+.gist-paper-body-text:hover{
+    background:whitesmoke; 
+    transition:0.5s ease-in all;
+    cursor:pointer; 
+}
 .semi-footer{
     background: antiquewhite;
     color: black;
@@ -607,7 +691,8 @@ body{
     padding-left: 15px;
 }
 .paper-panel:hover{
-    transform:translateY(-10px);
+    box-shadow:0 6px 6px gray;
+    z-index:1;
     transition:0.3s ease-in all;
     cursor:pointer;
 }
@@ -626,7 +711,6 @@ body{
     width:100%; 
     object-fit: cover !important; 
     margin:0;
-
 }
 .action-btn {
     color: rgb(107, 106, 106); 
