--- a/resources/assets/js/app.css
+++ b/resources/assets/js/app.css
@@ -1,3 +1,71 @@
+
+
+.view-thumbnail{
+  cursor:pointer; 
+  background: antiquewhite;
+}
+.similar{
+  cursor:pointer;
+  padding:30px;min-height:200px;max-height:200px;overflow:hidden; background:#282828;border:solid 1px black; border-top-width:3px;
+}
+.similar:hover{
+  transform: translateY(-10px);
+  transition:.5s ease-in-out;
+}
+.view-thumbnail:hover{
+  cursor:pointer; 
+  background:whitesmoke; 
+  color:black;
+  transition: .3s ease-in-out all; 
+}
+.v-c-b{
+  cursor:pointer; 
+  color:black !important;
+}
+.v-c-b:hover{
+  transform: scale(1.1);
+  background:white !important;
+  transition: .5s ease-in-out all;
+}
+.grab-button{
+  border-width: 0px; 
+  background:floralwhite !important;
+}
+.grab-button:hover{
+  background: gray !important; 
+  color:white !important; 
+  border-radius: 5px;
+  transition: .3s ease-in-out all;
+  border-width: 2px;
+  border-color:white;
+  -webkit-box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
+    box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)
+}
+.grab-button:focus{
+  outline:0 !important; 
+  border-width: 2px;
+  border-color:white !important;
+  background: gray !important; 
+  color:white !important; 
+  border-radius: 5px;
+
+}
+.margin-right-5{
+  margin-right: 5px;
+}
+.envelope-correction{
+  margin:7px;
+}
+.results-pad{
+
+  border-top-right-radius: 0px; 
+  border-top-left-radius: 0px; 
+  border-top-width: 5px; 
+  border-top-color: black; 
+  background: floralwhite;
+  margin-left:-13px;
+}
+
 .upload-button-design{
   background:rgb(255, 169, 8) !important; 
   color:black!important;
@@ -25,7 +93,7 @@
 }
 .QB{
     font-size:3rem;
-    color:white; 
+    color:white !important; 
 }
 
 .tint-focus{
@@ -176,7 +244,7 @@
     background: rgb(63, 158, 247) !important;
 }
 .number-font{
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .p-r-fix{
