--- a/resources/assets/js/app.css
+++ b/resources/assets/js/app.css
@@ -193,11 +193,11 @@
 }
 .view-thumbnail{
   cursor:pointer; 
-  background: antiquewhite;
+  background: whitesmoke;
 }
 .similar{
   cursor:pointer;
-  padding:30px;min-height:200px;max-height:200px;overflow:hidden; background:#282828;border:solid 1px black; border-top-width:3px;
+  padding:30px;min-height:156px;max-height:156px;overflow:hidden; background:#282828;border:solid 1px black; border-top-width:3px;
 }
 .similar:hover{
   transform: translateY(-10px);
@@ -205,7 +205,7 @@
 }
 .view-thumbnail:hover{
   cursor:pointer; 
-  background:whitesmoke; 
+  background:white; 
   color:black;
   transition: .3s ease-in-out all; 
 }
